--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -20,7 +20,7 @@ body {
     font-style: normal;
 
     min-width: 1220px;
-    height: 1400px;
+
 }
 
 ul {
@@ -205,7 +205,7 @@ a {
 }
 
 .header-prime {
-    background: #222021 url("../assets/images/menu.jpg") no-repeat right;
+    background: #222021 url("../assets/images/menu-prime.jpg") no-repeat right;
 
     display: flex;
     align-items: center;
@@ -289,8 +289,6 @@ a {
 
         a {
             display: block;
-            font-family: 'Gilroy';
-            font-style: normal;
             font-weight: 500;
             font-size: 18px;
             line-height: 21px;
@@ -304,8 +302,6 @@ a {
 
 
         .navigation-main-active {
-            font-family: 'Gilroy';
-            font-style: normal;
             font-weight: 600;
             font-size: 18px;
             line-height: 21px;
@@ -314,6 +310,109 @@ a {
             opacity: 1;
 
             border-bottom: 3px solid #618967;
+        }
+    }
+}
+
+.food-block {
+    margin-top: 40px;
+
+    h2 {
+        font-weight: 700;
+        font-size: 32px;
+        line-height: 39px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+
+        border-left: 4px solid #618967;
+        padding-left: 20px;
+        vertical-align: middle;
+    }
+
+    .food-carousel {
+        margin: 40px 0;
+
+        display: flex;
+
+        column-gap: 15px;
+
+        justify-content: space-between;
+    }
+
+    .food-carousel-card {
+        background: linear-gradient(90deg, #494544 0%, #504B4A 100%);
+        border-radius: 10px;
+        flex-basis: 380px;
+
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+
+        overflow: hidden;
+
+        .food-carousel-card-info {
+            padding: 20px;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+
+            p {
+                font-weight: 400;
+                font-size: 13px;
+                line-height: 17px;
+                color: #CFCFCF;
+                padding-right: 20px;
+            }
+        }
+
+        .food-carousel-card-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: baseline;
+
+            h3 {
+                font-weight: 700;
+                font-size: 22px;
+                line-height: 27px;
+                color: #FFFFFF;
+                margin: 0;
+            }
+
+            span {
+                font-weight: 400;
+                font-size: 12px;
+                line-height: 14px;
+                color: #FFFFFF;
+            }
+        }
+
+        .food-carousel-card-price {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            margin-top: auto;
+
+            span {
+                font-weight: 600;
+                font-size: 20px;
+                line-height: 24px;
+                color: #FFFFFF;
+            }
+
+            a {
+                display: block;
+
+                background: linear-gradient(115deg, #618967 5%, #72A479 94%);
+                border-radius: 10px;
+
+                font-weight: 600;
+                font-size: 14px;
+                line-height: 17px;
+                color: #FFFFFF;
+
+                padding: 10px 20px;
+            }
         }
     }
 }
