--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -322,6 +322,7 @@ a {
 
 .food-block {
     margin-top: 40px;
+    margin-bottom: 60px;
 
     h2 {
         font-weight: 700;
@@ -436,21 +437,12 @@ a {
     }
 }
 
-
-
-
-
-
-
-
-
 .our-cafe {
     display: flex;
     column-gap: 30px;
     padding: 60px;
 
-    margin-top: 100px;
-    margin-bottom: 200px;
+    margin: 100px 0;
 
     background: #201E1F url("../assets/images/menu-cafe.jpg") no-repeat center right;
 
@@ -487,7 +479,7 @@ a {
 
             text-transform: uppercase;
 
-            
+
         }
     }
 
@@ -571,44 +563,78 @@ a {
 
 
 
+.footer-block {
+    background: linear-gradient(270.7deg, #44403F 0.4%, #211F20 100%);
+}
 
+.footer-grid {
+    display: flex;
+    align-items: center;
+    column-gap: 55px;
+    padding: 25px;
 
+    .footer-up {
+        display: block;
 
+        width: 64px;
+        height: 64px;
 
+        background: #FFFFFF url("../assets/icons/arrow-up.svg") no-repeat center;
+        background-size: 50%;
 
+        border-radius: 50%;
+    }
 
+    .footer-links {
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px;
 
+        .footer-logo {
+            display: block;
+            font-weight: 700;
+            font-size: 25px;
+            line-height: 25px;
+            letter-spacing: 0.15em;
+            color: #FFFFFF;
+            text-transform: uppercase;
+            margin-bottom: 20px;
+        }
 
+        .footer-link {
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 16px;
+            color: #FFFFFF;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        }
 
+        .footer-copyright {
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 14px;
+            color: #CFCFCF;
+            width: 210px;
+        }
+    }
 
+    .footer-navigation {
+        display: flex;
+        align-items: center;
+        column-gap: 20px;
 
+        a {
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 24px;
+            color: #FFFFFF;
+            padding: 5px;
+        }
+    }
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-a:hover, button:hover {
+a:hover,
+button:hover {
     opacity: 0.7;
     background: rgba(255, 255, 255, 0.05);
 }
